syntax = "proto3";

package protobufGenerated;

message ProtobufInputEvent {
  message KeyboardEventType {
	uint32 virtualKeyCode = 1;
	bool keyUp = 2;
  }
  message MouseEventType {
	int32 x = 1;
	int32 y = 2;
	uint32 actionType = 3;
	uint32 wheelRotation = 4;
	bool relativePosition = 5;
	bool mappedToVirtualDesktop = 6;
  }

  uint64 timeSinceLastEvent = 1;

  oneof Event {
     KeyboardEventType keyboardEvent  = 2;
     MouseEventType mouseEvent = 3;
  }
}

message ProtobufInputEventList {
	repeated ProtobufInputEvent inputEvents = 1;
}